--- a/index.html
+++ b/index.html
@@ -21,13 +21,6 @@
 
     <header>
         <div class="logo">Survey</div>
-        <nav>
-            <ol>
-                <a href="">Home</a>
-                <a href="">Form</a>
-                <a href="">Contact</a>
-            </ol>
-        </nav>
     </header>
 
     <main>
@@ -79,6 +72,7 @@
     </main>
 
     <footer>
+        <div>Made with <span style="color:white;">&hearts;</span> by Aravind</div>
 
         <div class="links">
             <ol>
@@ -88,7 +82,6 @@
             </ol>
         </div>
 
-        <div>Made with <span style="color:black;">&hearts;</span> by Aravind</div>
     </footer>
 
 </body>
