Responsive bug fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <title>Feedback</title>
 
+
+    <!-- RESPONSIVE STYLESHEET -->
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- MAIN STYLESHEET -->
     <link rel="stylesheet" href="assets/css/main.css">
 
